more misc cleanups to modelgen code